src/test/ui/issues/issue-45829/rename.rs
use core;
use std as core;
//~^ ERROR is defined multiple times

fn main() {
    1 + 1;
}
